--- a/MagicSquare/src/main/res/values/strings.xml
+++ b/MagicSquare/src/main/res/values/strings.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name" >MagicSquare
-    </string>
-    <string name="action_settings" >Settings
-    </string>
-    <string name="hello_world" >Hello world!
-    </string>
+    <string name="app_name">Magic square!</string>
+    <string name="title">Awesome magic square</string>
+    <string name="subtitle">Use the seekbar to change the size of the square</string>
 
 </resources>
